--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
+
+body {
+  border: 1px solid blue;
+  border-radius: 6px;
+  min-height: 100vh;
+  padding: 10px;
+  margin: 30px;
+  padding: 40px;
+}
